# qt_simple_crypt_egui

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: index.html  qt_simple_crypt_egui.js  qt_simple_crypt_egui_bg.wasm  sw.js
src/: app.rs  main.rs
